--- a/public/html/app-shell/footer-nav.html
+++ b/public/html/app-shell/footer-nav.html
@@ -1,18 +1,74 @@
 <ul id="footer-nav-list">
   <li>
     <a href="/html/ecoactions.html">
-      <i data-lucide="circle-check-big"></i>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-circle-check-big-icon lucide-circle-check-big">
+        <path d="M21.801 10A10 10 0 1 1 17 3.335" />
+        <path d="m9 11 3 3L22 4" />
+      </svg>
     </a>
   </li>
   <li>
-    <a href="/html/groups.html"><i data-lucide="users"></i></a>
+    <a href="/html/groups.html"
+      ><svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-users-icon lucide-users">
+        <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2" />
+        <circle cx="9" cy="7" r="4" />
+        <path d="M22 21v-2a4 4 0 0 0-3-3.87" />
+        <path d="M16 3.13a4 4 0 0 1 0 7.75" /></svg
+    ></a>
   </li>
   <li>
-    <a href="/html/search.html"><i data-lucide="search"></i></a>
+    <a href="/html/search.html"
+      ><svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-search-icon lucide-search">
+        <circle cx="11" cy="11" r="8" />
+        <path d="m21 21-4.3-4.3" /></svg
+    ></a>
   </li>
   <li>
     <a href="/html/stats.html">
-      <i data-lucide="chart-line"></i>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="lucide lucide-chart-line-icon lucide-chart-line">
+        <path d="M3 3v16a2 2 0 0 0 2 2h16" />
+        <path d="m19 9-5 5-4-4-3 3" />
+      </svg>
     </a>
   </li>
 </ul>
