--- a/public/html/app-shell/nav-bar.html
+++ b/public/html/app-shell/nav-bar.html
@@ -13,7 +13,21 @@
           id="profileDropdown"
           data-bs-toggle="dropdown"
           aria-expanded="false">
-          <i class="profile-icon" data-lucide="circle-user-round"></i>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-circle-user-round-icon lucide-circle-user-round">
+            <path d="M18 20a6 6 0 0 0-12 0" />
+            <circle cx="12" cy="10" r="4" />
+            <circle cx="12" cy="12" r="10" />
+          </svg>
           <img
             src="/assets/images/profile-icon.png"
             alt="Profile"
@@ -63,7 +77,21 @@
             id="profileDropdown"
             data-bs-toggle="dropdown"
             aria-expanded="false">
-            <i class="profile-icon" data-lucide="circle-user-round"></i>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="lucide lucide-circle-user-round-icon lucide-circle-user-round">
+              <path d="M18 20a6 6 0 0 0-12 0" />
+              <circle cx="12" cy="10" r="4" />
+              <circle cx="12" cy="12" r="10" />
+            </svg>
             <img
               src="/assets/images/profile-icon.png"
               alt="Profile"
