--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -31,7 +31,6 @@
     <link rel="stylesheet" href="/css/stats.css" />
     <link rel="stylesheet" href="/css/loader.css" />
     <script src="/scripts/load-component.js"></script>
-    <script src="https://unpkg.com/lucide@latest"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/date-fns@4.1.0/cdn.js"></script>
@@ -82,7 +81,19 @@
 
       <h2>
         <span class="arrow-wrapper">
-          <i data-lucide="chevron-right" data-container="this-week"></i>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-chevron-right-icon lucide-chevron-right">
+            <path d="m9 18 6-6-6-6" />
+          </svg>
         </span>
         This Week
         <span id="more-content">&nbsp;․․․</span>
@@ -105,7 +116,19 @@
 
       <h2>
         <span class="arrow-wrapper">
-          <i data-lucide="chevron-right" data-container="lifetime"></i>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-chevron-right-icon lucide-chevron-right">
+            <path d="m9 18 6-6-6-6" />
+          </svg>
         </span>
         Lifetime
         <span id="more-content">&nbsp;․․․</span>
@@ -148,7 +171,6 @@
       loadComponent("nav-bar", "/html/app-shell/nav-bar.html");
       (async () => {
         await loadComponent("footer-nav", "/html/app-shell/footer-nav.html");
-        await lucide.createIcons();
         document.querySelectorAll(".arrow-wrapper .lucide").forEach((arrow) => {
           arrow.addEventListener("click", (event) => {
             arrow.classList.toggle("open");
