--- a/public/html/app-shell/nav-bar.html
+++ b/public/html/app-shell/nav-bar.html
@@ -23,7 +23,7 @@
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="lucide lucide-circle-user-round-icon lucide-circle-user-round">
+            class="profile-icon lucide lucide-circle-user-round-icon lucide-circle-user-round">
             <path d="M18 20a6 6 0 0 0-12 0" />
             <circle cx="12" cy="10" r="4" />
             <circle cx="12" cy="12" r="10" />
@@ -87,7 +87,7 @@
               stroke-width="2"
               stroke-linecap="round"
               stroke-linejoin="round"
-              class="lucide lucide-circle-user-round-icon lucide-circle-user-round">
+              class="profile-icon lucide lucide-circle-user-round-icon lucide-circle-user-round">
               <path d="M18 20a6 6 0 0 0-12 0" />
               <circle cx="12" cy="10" r="4" />
               <circle cx="12" cy="12" r="10" />
