--- a/public/html/stats.html
+++ b/public/html/stats.html
@@ -82,6 +82,7 @@
       <h2>
         <span class="arrow-wrapper">
           <svg
+            data-container="this-week"
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
@@ -117,6 +118,7 @@
       <h2>
         <span class="arrow-wrapper">
           <svg
+            data-container="lifetime"
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
@@ -171,12 +173,6 @@
       loadComponent("nav-bar", "/html/app-shell/nav-bar.html");
       (async () => {
         await loadComponent("footer-nav", "/html/app-shell/footer-nav.html");
-        document.querySelectorAll(".arrow-wrapper .lucide").forEach((arrow) => {
-          arrow.addEventListener("click", (event) => {
-            arrow.classList.toggle("open");
-            toggleStatsContainer(event);
-          });
-        });
       })();
       loadComponent("footer", "/html/app-shell/footer.html");
     </script>
